tests/ui/impl-trait/bind-hidden-type-in-projection-matching.stderr
error[E0161]: cannot move a value of type `<X as Trait<'_>>::Out<Foo>`
  --> $DIR/bind-hidden-type-in-projection-matching.rs:17:9
   |
LL |     let x = *x;
   |         ^ the size of `<X as Trait<'_>>::Out<Foo>` cannot be statically determined

error[E0507]: cannot move out of `*x` which is behind a shared reference
  --> $DIR/bind-hidden-type-in-projection-matching.rs:17:13
   |
LL |     let x = *x;
   |             ^^ move occurs because `*x` has type `<X as Trait<'_>>::Out<Foo>`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let x = *x;
LL +     let x = x;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0161, E0507.
For more information about an error, try `rustc --explain E0161`.
